# Meta-Dispatcher

./: README.md  constraints.txt  notes.txt  pyproject.toml
devNotes/: prompt.txt
meta-dispatcher/: metaDispatcher.py  services.py
src/meta-dispatcher/: metaDispatcher.py
src/meta_dispatcher/: app.py  services.py
test/unit/: test_app.py
