# pyproject.toml

[build-system]
requires = ["setuptools>=67.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meta-dispatcher"
version = "1.0.0"
dependencies = [
    "httpx",
    "fastapi",
    "uvicorn",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pytest",
]